CS_PROD_20150209_01/Metadata/unpackaged/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Areas_of_Interest__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Areas of Interest</label>
        <picklist>
            <picklistValues>
                <fullName>Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Billable_Dollars__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Billable Dollars</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Billing_Type__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Billing Type</label>
        <picklist>
            <picklistValues>
                <fullName>Billable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Billable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CRM_Activity_ID__c</fullName>
        <description>Created by LM on 1/29/14 for Phase2</description>
        <externalId>true</externalId>
        <label>CRM Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Note_Created_By__c</fullName>
        <description>Created by LM on 1/24/14 for Phase2 rollout</description>
        <label>CRM Note Created By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_Note_ID__c</fullName>
        <description>Created by LM on 1/23/2014 for phase2</description>
        <label>CRM Note ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Result__c</fullName>
        <label>Call Result</label>
        <picklist>
            <picklistValues>
                <fullName>Number Disconnected / Call Did Not Go Through</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer / Left a Voice Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer / Did Not Leave a Voice Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Answered / Unproductive Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Answered / Productive Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Answered / Renewal BDC Cycle Milestone Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Answer / Training Not Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Answered / Training Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sent Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule BDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold Clip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client already had clip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client didn’t need clip</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Template_ID__c</fullName>
        <description>Contains the ID for the Call Template</description>
        <label>Call Template ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Services_Task_Type__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Client Services Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Paid Notification Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Admin Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitor_Info__c</fullName>
        <description>Created by LM on 9/3/2013 for Phase 2 rollout</description>
        <label>Competitor Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <description>Added by LM on 2/14/2013; From NetSuite</description>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Distribution_Task_Type_del__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Distribution Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Assign to Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assign Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expenses__c</fullName>
        <description>Created by LM on 10/3/2013 for Phase 2 rollout</description>
        <label>Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Function_Department__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Function/Department</label>
        <picklist>
            <picklistValues>
                <fullName>Accounting/Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fundraising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Human Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Relations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Membership Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR/Corporate Communications</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Job_Role__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Job Role</label>
        <picklist>
            <picklistValues>
                <fullName>Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistant/Coordinator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freelancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intern</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner/Principal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>President</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professor/Dean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vice President</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Pass_Date__c</fullName>
        <description>Created by LM on 10/4/2013 for Phase 2 rollout</description>
        <label>Lead Pass Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Pass_Rep__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Lead Pass Rep</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Lead Score</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Status__c</fullName>
        <description>Created by LM on 10/4/2013 for Phase 2 rollout</description>
        <label>Lead Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unqualified</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Substatus__c</fullName>
        <description>Created by LM on 10/4/2013 for Phase 2 rollout</description>
        <label>Lead Substatus</label>
        <picklist>
            <controllingField>Lead_Status__c</controllingField>
            <picklistValues>
                <fullName>Bad Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Content Collector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Contact</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Note_Snippet__c</fullName>
        <description>Created by LM on 12/3/2013 for Phase 2 rollout</description>
        <label>Note Snippet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Num_of_Users_Trained__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Num of Users Trained</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Site_Expiration__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>On-Site Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Site_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>On-Site Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal (Paid Extension)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Type_del__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Opportunity Type</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal (Paid Extension)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upsell</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PR_Activities__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>PR Activities</label>
        <picklist>
            <picklistValues>
                <fullName>Use Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Agency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Free Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use Cision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PR_Department_Size__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>PR Department Size</label>
        <picklist>
            <picklistValues>
                <fullName>There is a whole bunch of us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>There are a few of us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>It&apos;s just me</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>There is no PR department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>CisionPoint: Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CisionPoint: Analyze</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cision Social Media</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <description>Created by LM on 11/19/2013 for Phase 2 rollout</description>
        <label>Rating</label>
        <picklist>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <description>Created by LM on 10/28/2013 for Phase 2 rollout</description>
        <label>Reason - At Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Budget Objection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in User</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor Threat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Responsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Usage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (See Notes)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Issue</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_BDC_Cycle__c</fullName>
        <description>Created by LM on 10/23/2013 for Phase 2 rollout</description>
        <label>Renewal BDC Cycle</label>
        <picklist>
            <picklistValues>
                <fullName>BDC New Biz Rep Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Introduction Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 1 Month Youtility Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 3 Month Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 4 Month Youtility Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 6 Month Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 6 Month Youtility Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 9 Month Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 9 Month Youtility Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 11 Month Youtility Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Call_Grade__c</fullName>
        <description>Created by LM on 9/24/2013 for Phase 2 rollout</description>
        <label>Renewal Call Grade</label>
        <picklist>
            <picklistValues>
                <fullName>A+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Renewal_Phone_Call_Templates__c</fullName>
        <description>Created by LM on 10/31/2013 for Phase 2 rollout</description>
        <label>Renewal Phone Call Templates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Route_To__c</fullName>
        <description>Created by LM on 9/5/2013 for Phase 2 rollout</description>
        <label>Route To</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Admin-Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Renewal_Task_Type_del__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Sales &amp; Renewal Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Initial Outbound Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow Up Conversation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10K Proposal Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Introduction Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 3 Month Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 6 Month Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 9 Month Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salesperson__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Salesperson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>Service</label>
        <picklist>
            <picklistValues>
                <fullName>1 Hour Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1/2 Hour Demo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State_Province__c</fullName>
        <description>Added by LM on 2/14/2013; From MS CRM</description>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <description>Created by LM on 9/26/2013 for Phase 2 rollout</description>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>At Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite-Half Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Introduction Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC Upsell Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 3 Month Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 6 Month Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDC 9 Month Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Small Business Outreach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PitchEngine Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Paid Notification CAll</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Task_Type__c</fullName>
        <label>Training Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Webinar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consult</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onsite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy Call</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Employees__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Web Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fewer than 1,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 1,000</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Lead_Comments__c</fullName>
        <description>Created by LM on 1/1/614 for Phase2</description>
        <label>Web Lead Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Revenue__c</fullName>
        <description>Created by LM on 10/21/2013 for Phase 2 rollout</description>
        <label>Web Revenue</label>
        <picklist>
            <picklistValues>
                <fullName>Small Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Less than $150 Million</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater than $150 Million</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>Katie_My_Open_Tasks_This_Year</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>TASK.STATUS</field>
            <operation>equals</operation>
            <value>Not Started</value>
        </filters>
        <label>Katie- My Open Tasks This Year</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivitiesCleanup</fullName>
        <columns>TASK.RECORDTYPE</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities Cleanup</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Tasks_This_Year</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>TASK.CALLDISPOSITION</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <label>My Open Tasks This Year</label>
        <sharedTo>
            <role>Renewal_Sales</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Renewal_Tasks</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Task.Campaign_Response,Task.Renewal_Sales</value>
        </filters>
        <label>My Renewal Tasks</label>
    </listViews>
    <listViews>
        <fullName>Tasks_Created_Today</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.PRIORITY</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Note_Snippet__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Tasks Created Today</label>
    </listViews>
</CustomObject>